[gd_scene load_steps=12 format=2]

[ext_resource path="res://utils/AnimatedButton.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/OptionsHover.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/OptionsSelect.wav" type="AudioStream" id=3]
[ext_resource path="res://utils/StyleTrans.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=16]
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_size = 3
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 1, 1 )
anti_aliasing = false

[sub_resource type="Resource" id=5]
script = ExtResource( 4 )
default_timing = 0.15
default_trans = 0
default_ease = 0
overrides = 0

[sub_resource type="Resource" id=6]
script = ExtResource( 4 )
default_timing = 0.5
default_trans = 10
default_ease = 1
overrides = 7
bg_color_timing = 0.5
bg_color_trans = 0
bg_color_ease = 0
border_width_timing = 1.0
border_width_trans = 10
border_width_ease = 1
border_color_timing = 0.5
border_color_trans = 0
border_color_ease = 0

[sub_resource type="Resource" id=7]
script = ExtResource( 4 )
default_timing = 0.1
default_trans = 0
default_ease = 0
overrides = 0

[node name="AnimatedButton" type="ToolButton"]
margin_right = 12.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 6, 11 )
custom_styles/focus = SubResource( 13 )
action_mode = 0
script = ExtResource( 1 )
style_normal_override = SubResource( 16 )
style_hover_override = SubResource( 14 )
style_pressed_override = SubResource( 15 )
timing_normal = SubResource( 5 )
timing_hover = SubResource( 6 )
timing_pressed = SubResource( 7 )

[node name="BG" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 6, 11 )
mouse_filter = 2
custom_styles/panel = SubResource( 16 )

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="PressedSFX" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="." to="." method="_on_AnimatedButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_AnimatedButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_AnimatedButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AnimatedButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_AnimatedButton_pressed"]
[connection signal="resized" from="." to="." method="_on_AnimatedButton_resized"]
